--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           args: >-
             --pdf-engine=xelatex
-            metadata.yaml
+            ./pandoc/metadata.yaml
             rapport.md
             -o rapport.pdf
 
